<resources>
    <string name="app_name">FaceMaker</string>
    <string name="random_face">Random Face</string>
    <string name="hair">Hair</string>
    <string name="eyes">Eyes</string>
    <string name="skin">Skin</string>
    <string name="choose_hairstyle">Choose Hairstyle:</string>
    <string name="choose_color_for_hair_eyes_or_skin">Choose color for hair, eyes, or skin</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>

    <string-array name="HairSpinnerEntries">
        <item>Long</item>
        <item>Short</item>
        <item>Bald</item>
    </string-array>

</resources>